--- a/client/package.json
+++ b/client/package.json
@@ -16,19 +16,19 @@
     "@monaco-editor/react": "^4.6.0",
     "zustand": "^4.4.7",
     "axios": "^1.6.2",
-    "lucide-react": "^0.294.0"
+    "lucide-react": "^0.294.0",
+    "vite": "^6.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "~5.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.15.0",
-    "vite": "^6.0.3"
+    "typescript-eslint": "^8.15.0"
   }
 }
