--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "cd client && npm run build",
+  "buildCommand": "npm run build",
   "outputDirectory": "client/dist",
-  "installCommand": "cd client && npm install",
-  "devCommand": "cd client && npm run dev"
+  "installCommand": "npm install --legacy-peer-deps",
+  "devCommand": "npm run dev:client"
 }
