--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "zustand": "^4.4.7",
     "axios": "^1.6.2",
     "lucide-react": "^0.294.0",
+    "jsonwebtoken": "^9.0.2",
     "vite": "^6.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "typescript": "~5.6.2"
@@ -29,6 +30,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "typescript-eslint": "^8.15.0"
   }
 }
