--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.2",
     "lucide-react": "^0.294.0",
     "jsonwebtoken": "^9.0.2",
+    "mime-types": "^2.1.35",
     "ssh2-sftp-client": "^9.0.4",
     "vite": "^6.0.3",
     "@vitejs/plugin-react": "^4.3.4",
