--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.294.0",
     "jsonwebtoken": "^9.0.2",
     "mime-types": "^2.1.35",
+    "bcryptjs": "^2.4.3",
     "ssh2-sftp-client": "^9.0.4",
     "vite": "^6.0.3",
     "@vitejs/plugin-react": "^4.3.4",
@@ -32,6 +33,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
     "typescript-eslint": "^8.15.0"
   }
