Fix file serving: use direct /api/serve/ URLs instead of rewrites

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -3,75 +3,5 @@
   "buildCommand": "npm install && npm run build",
   "outputDirectory": "dist",
   "installCommand": "npm install",
-  "devCommand": "npm run dev",
-  "rewrites": [
-    {
-      "source": "/:path*.html",
-      "destination": "/api/serve/:path*.html"
-    },
-    {
-      "source": "/:path*.htm",
-      "destination": "/api/serve/:path*.htm"
-    },
-    {
-      "source": "/:path*.pdf",
-      "destination": "/api/serve/:path*.pdf"
-    },
-    {
-      "source": "/:path*.txt",
-      "destination": "/api/serve/:path*.txt"
-    },
-    {
-      "source": "/:path*.md",
-      "destination": "/api/serve/:path*.md"
-    },
-    {
-      "source": "/:path*.png",
-      "destination": "/api/serve/:path*.png"
-    },
-    {
-      "source": "/:path*.jpg",
-      "destination": "/api/serve/:path*.jpg"
-    },
-    {
-      "source": "/:path*.jpeg",
-      "destination": "/api/serve/:path*.jpeg"
-    },
-    {
-      "source": "/:path*.gif",
-      "destination": "/api/serve/:path*.gif"
-    },
-    {
-      "source": "/:path*.svg",
-      "destination": "/api/serve/:path*.svg"
-    },
-    {
-      "source": "/:path*.css",
-      "destination": "/api/serve/:path*.css"
-    },
-    {
-      "source": "/:path*.js",
-      "destination": "/api/serve/:path*.js"
-    },
-    {
-      "source": "/:path*.json",
-      "destination": "/api/serve/:path*.json"
-    },
-    {
-      "source": "/:path*.xml",
-      "destination": "/api/serve/:path*.xml"
-    },
-    {
-      "source": "/:path*.mp3",
-      "destination": "/api/serve/:path*.mp3"
-    },
-    {
-      "source": "/:path*.mp4",
-      "destination": "/api/serve/:path*.mp4"
-    },
-    {
-      "source": "/:path*.zip",
-      "destination": "/api/serve/:path*.zip"
-    }
-  ]
+  "devCommand": "npm run dev"
 }
