--- a/client/vercel.json
+++ b/client/vercel.json
@@ -3,21 +3,5 @@
   "buildCommand": "npm install && npm run build",
   "outputDirectory": "dist",
   "installCommand": "npm install",
-  "devCommand": "npm run dev",
-  "functions": {
-    "api/serve/[...path].ts": {
-      "memory": 1024,
-      "maxDuration": 30
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/api/serve/:path*",
-      "destination": "/api/serve/:path*"
-    },
-    {
-      "source": "/((?!api/).*)",
-      "destination": "/index.html"
-    }
-  ]
+  "devCommand": "npm run dev"
 }
