docx export + palette simplify

--- a/client/package.json
+++ b/client/package.json
@@ -23,13 +23,17 @@
     "@tiptap/extension-text-style": "^3.13.0",
     "@tiptap/extension-typography": "^3.13.0",
     "@tiptap/extension-underline": "^3.13.0",
+    "@tiptap/html": "^3.14.0",
     "@tiptap/react": "^3.13.0",
     "@tiptap/starter-kit": "^3.13.0",
     "@vitejs/plugin-react": "^4.3.4",
     "antd": "^5.21.6",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
+    "docx": "^9.5.1",
+    "html-to-docx": "^1.8.0",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.294.0",
     "mime-types": "^2.1.35",
     "react": "^18.3.1",
