--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "html-to-docx": "^1.5.1",
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
