fix companion header and theme crash; harden auth

--- a/.env.production
+++ b/.env.production
@@ -9,7 +9,10 @@ PORT=3001
 
 # Security (CHANGE THESE IN VERCEL DASHBOARD)
 JWT_SECRET=CHANGE-THIS-TO-RANDOM-STRING
+# Option A: plain password (fallback)
 PASSWORD=CHANGE-THIS-PASSWORD
+# Option B: bcrypt hash (preferred). If set, PASSWORD is ignored.
+# PASSWORD_HASH=$2b$10$examplehashhere
 
 # File Storage
 FILE_BASE_PATH=/tmp/files
