--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,8 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "multer": "^1.4.5-lts.1",
-    "ws": "^8.16.0"
+    "ws": "^8.16.0",
+    "ssh2-sftp-client": "^10.0.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.5",
