--- a/client/api/package.json
+++ b/client/api/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "dependencies": {
     "@vercel/node": "^3.0.0",
-    "html-to-docx": "^1.8.0",
+    "docx": "^8.5.0",
     "jsonwebtoken": "^9.0.0",
     "ssh2-sftp-client": "^9.1.0"
   }
