--- a/client/vercel.json
+++ b/client/vercel.json
@@ -2,6 +2,11 @@
   "framework": "vite",
   "buildCommand": "npm install && npm run build",
   "outputDirectory": "dist",
-  "installCommand": "npm install",
-  "devCommand": "npm run dev"
+  "installCommand": "npm install && cd api && npm install",
+  "devCommand": "npm run dev",
+  "functions": {
+    "api/**/*.ts": {
+      "runtime": "@vercel/node@3"
+    }
+  }
 }
