--- a/client/vercel.json
+++ b/client/vercel.json
@@ -3,10 +3,5 @@
   "buildCommand": "npm install && npm run build",
   "outputDirectory": "dist",
   "installCommand": "npm install && cd api && npm install",
-  "devCommand": "npm run dev",
-  "functions": {
-    "api/**/*.ts": {
-      "runtime": "@vercel/node@3"
-    }
-  }
+  "devCommand": "npm run dev"
 }
